--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,12 @@
 Werkzeug==0.15.2
-mysqlclient==1.3.13
-Django==2.2
+PyMySQL==0.9.3
+Django==2.0.13
 django-mysql==3.0.0.post1
 djangorestframework==3.9.2
 djangorestframework-simplejwt==4.0.0
 django-cors-headers==2.4.0
 boto3==1.9.102
-requests==2.21.0
 PyJWT==1.7.1
 watchtower==0.5.5
+requests==2.20.1
 cryptography==2.6.1
-requests==2.21.0
