--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,4 +1,4 @@
-service: ${env:PROJECT}
+service: EIA003
 
 plugins:
   - serverless-python-requirements
@@ -9,6 +9,9 @@ custom:
   region: ${opt:region, 'ap-southeast-2'}
   wsgi:
     app: app.wsgi.application
+  pythonRequirements:
+    dockerizePip: true
+    dockerFile: ./Dockerfile
 
 provider:
   name: aws
