--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: ./backend
     environment:
       - DJANGO_DEBUG=true
+      - PROJECT_NAME=eia003
     ports:
       - "5000:5000"
     volumes:
@@ -17,7 +18,7 @@ services:
     environment:
       - REACT_APP_BACKEND_URL=http://localhost:5000
       - REACT_APP_FRONTEND_URL=http://localhost:3000
-      - PARAMETER_PATH=/dev/EIA003
+      - PROJECT_NAME=eia003
     ports:
       - "3000:3000"
     volumes:
