Additions to deployment pipeline Prod CodeBuild (triggered by manual approval) Frontend CloudFront CNAMEs with custom ssl Backend serverless custom domain via serverless-domain-manager

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -3,12 +3,18 @@ service: ${env:PROJECT_NAME}
 plugins:
   - serverless-python-requirements
   - serverless-wsgi
+  # - serverless-domain-manager
 
 custom:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'ap-southeast-2'}
   wsgi:
     app: app.wsgi.application
+  # customDomain:
+  #   domainName: ${env:REACT_APP_BACKEND_URL, ''}
+  #   certificateArn: ${env:DOMAIN_CERT_ARN, ''}
+  #   createRoute53Record: 'true'
+  #   endpointType: 'regional'
 
 provider:
   name: aws
