--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     build: ./backend
     environment:
       - DJANGO_DEBUG=true
-      - PROJECT_NAME=eia003
+    env_file:
+      - local.env
     ports:
       - "5000:5000"
     volumes:
@@ -18,7 +19,8 @@ services:
     environment:
       - REACT_APP_BACKEND_URL=http://localhost:5000
       - REACT_APP_FRONTEND_URL=http://localhost:3000
-      - PROJECT_NAME=eia003
+    env_file:
+      - local.env
     ports:
       - "3000:3000"
     volumes:
