--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "backend",
+  "private": true,
   "devDependencies": {
     "serverless-python-requirements": "^4.3.0",
     "serverless-wsgi": "^1.7.2"
