Domain deployment Update Terraform config for Route53 and ACM Add serverless-domain-manager to Serverless deployment Include wildcard in domain ACM

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -3,22 +3,22 @@ service: ${env:PROJECT_NAME}
 plugins:
   - serverless-python-requirements
   - serverless-wsgi
-  # - serverless-domain-manager
+  - serverless-domain-manager
 
 custom:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'ap-southeast-2'}
   wsgi:
     app: app.wsgi.application
-  # customDomain:
-  #   domainName: ${env:REACT_APP_BACKEND_URL, ''}
-  #   certificateArn: ${env:DOMAIN_CERT_ARN, ''}
-  #   createRoute53Record: 'true'
-  #   endpointType: 'regional'
+  customDomain:
+    domainName: ${env:BACKEND_DOMAIN, ''}
+    certificateArn: ${env:BACKEND_DOMAIN_CERT_ARN, ''}
+    createRoute53Record: "true"
+    hostedZoneId: ${env:HOSTED_ZONE_ID, ''}
 
 provider:
   name: aws
-  runtime: python3.6
+  runtime: python3.7
   region: ${self:custom.region}
   deploymentBucket:
     name: ${env:PROJECT_BUCKET, ''}
