--- a/pipeline/terraform.tf.dist
+++ b/pipeline/terraform.tf.dist
@@ -2,6 +2,12 @@ provider "aws" {
   region = ""
 }
 
+provider "aws" {
+  # us-east-1 provider required for ACM certificates
+  region = "us-east-1"
+  alias = "us"
+}
+
 terraform {
   backend "s3" {
     bucket = ""
