--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "devDependencies": {
     "serverless-python-requirements": "^4.3.0",
-    "serverless-wsgi": "^1.7.2"
+    "serverless-wsgi": "^1.7.2",
+    "serverless-domain-manager": "^3.2.6"
   }
 }
