--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -12,7 +12,7 @@ custom:
     app: app.wsgi.application
   customDomain:
     domainName: ${env:BACKEND_DOMAIN, ''}
-    certificateArn: ${env:BACKEND_DOMAIN_CERT_ARN, ''}
+    certificateArn: ${env:DOMAIN_CERT_ARN, ''}
     createRoute53Record: "true"
     hostedZoneId: ${env:HOSTED_ZONE_ID, ''}
 
