--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,13 @@
-Werkzeug==0.15.2
-PyMySQL==0.9.3
-Django==2.0.13
-django-mysql==3.0.0.post1
-djangorestframework==3.9.2
-djangorestframework-simplejwt==4.0.0
-django-cors-headers==2.4.0
-boto3==1.9.102
+Werkzeug==0.15.4
+mysqlclient==1.4.2.post1
+Django==2.2.3
+django-mysql==3.2.0
+djangorestframework==3.10.0
+djangorestframework-simplejwt==4.3.0
+django-cors-headers==3.0.2
+boto3==1.9.188
 PyJWT==1.7.1
-watchtower==0.5.5
-requests==2.20.1
-cryptography==2.6.1
+watchtower==0.6.0
+requests==2.22.0
+cryptography==2.7
 JSON-log-formatter==0.2.0
