Update frontend dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,10 @@
   "name": "frontend",
   "private": true,
   "dependencies": {
-    "antd": "^3.19.8",
+    "antd": "^3.20.3",
     "axios": "^0.19.0",
     "login-landing-page": "^1.0.8",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-msal-jwt": "^1.1.2",
@@ -28,6 +29,6 @@
   ],
   "devDependencies": {
     "preval.macro": "^3.0.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.3"
   }
 }
