Include database initialisation script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - DB_NAME=dev
       - DB_PORT=3306
       - DB_USER=root
-      - DB_PASS=root
+      - DB_PASSWORD=root
     env_file:
       - local.env
     ports:
