Update Terraform configuration Use one hosted zone & ACM for stage and prod Separate providers file Add tags where possible Update to Terraform 0.12 syntax Add .dist files

--- a/pipeline/terraform.tf.dist
+++ b/pipeline/terraform.tf.dist
@@ -1,18 +1,12 @@
 provider "aws" {
-  region = ""
-}
-
-provider "aws" {
-  # us-east-1 provider required for ACM certificates
-  region = "us-east-1"
-  alias = "us"
+  region = "<YOUR_REGION>"
 }
 
 terraform {
   backend "s3" {
-    bucket = ""
-    key = "" 
-    region = ""
+    bucket  = "<YOUR_STATE_BUCKET>"
+    key     = "<YOUR_STATE_FILE>.tfstate"
+    region  = "<YOUR_STATE_REGION>"
     encrypt = "true"
   }
 }
